add EventsManager infortaion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
 	"compilerOptions": {
+
+		//编译选项,可以被忽略，这时编译器会使用默认值
+		"strictNullChecks": false, //在严格的null检查模式下，null和undefined值不包含在任何类型里，只允许赋值给void和本身对应的类型。
+
 		"skipLibCheck": true,
 		"experimentalDecorators": true,
 		"strict": true,
@@ -14,7 +18,7 @@
 			"es5",
 			"dom",
 			"es2015.promise"
-		]
+		]		
 	},
 	"include": [
 		"src",
