--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
 	"compilerOptions": {
+
+		"strictNullChecks": false, 
+
 		"skipLibCheck": true,
 		"experimentalDecorators": true,
 		"strict": true,
